--- a/DesktopContactsApp/DesktopContactsApp.csproj
+++ b/DesktopContactsApp/DesktopContactsApp.csproj
@@ -10,4 +10,10 @@
     <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="ConsoleManagerWindow.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+  </ItemGroup>
+
 </Project>
